update module